--- a/text/3-image-ann.tex
+++ b/text/3-image-ann.tex
@@ -229,7 +229,7 @@ solved by propagating the~entire image to obtain a~feature map before the~region
 proposition. For each object proposal is from the~feature map extracted
 a~fixed-length feature vector by a~region of interest (\zk{RoI}) pooling layer.
 
-The \zk{RoI} pooling layer can be seen as an one-level spatial pyramid pooling 
+The \zk{RoI} pooling layer can be seen as a one-level spatial pyramid pooling 
 layer, a~max pooling-based downsampling algorithm proposed in \cite{spp}. Its 
 purpose is to decompose separately each valid \zk{RoI} into a~fixed size $7 
 \times 7$ feature map. The~decomposition is made by quantization each \zk{RoI} 
