--- a/text/ondrej-pesek-dp-2018.tex
+++ b/text/ondrej-pesek-dp-2018.tex
@@ -190,7 +190,7 @@ vector masks from raster data. In the text of the thesis, the theory behind
 convolutional neural networks is introduced, followed by a list of their
 possible applications in the field of computer vision, a brief sketch of used
 technologies and is ended with a part dedicated to the implementation itself.
-Appendix contains a user manual and examples of usage.}
+The appendix contains a user manual and examples of usage.}
 {Cílem diplomové práce je návrh softwarových nástrojů umožňujících uživateli
 využití Mask R-CNN (Mask region-based convolutional neural networks) v
 prostředí GRASS GIS. Tyto nástroje zprostředkovávají možnost učit svůj vlastní
@@ -261,13 +261,13 @@ R-CNN, instanční segmentace}
 		%\noindent
 	\par\hspace{2ex}
 	{I would like to thank my parents for their support during my studies.
-	Then I would like to thank Martin Landa, not only for supervising my thesis,
-	but also for the initial impulse in direction to artificial neural networks
-	and open source GIS generally. My thanks also belong to Margherita Di Leo for
-	long initial discussions about the usage of neural networks in the field of
-	GIS, to Moritz Lennert for testing and comments during the code sprint in
-	Bonn, and to Luca Delucchi and Fondazione Edmund Mach for the willingness to
-	exploit their time and resources to test modules.}
+	Then I would like to thank Martin Landa, not only for supervising my thesis
+	but also for the initial impulse in the direction to artificial neural
+	networks and open source GIS generally. My thanks also belong to Margherita Di
+	Leo for long initial discussions about the usage of neural networks in the
+	field of GIS, to Moritz Lennert for testing and comments during the code
+	sprint in Bonn, and to Luca Delucchi and Fondazione Edmund Mach for
+	the~willingness to exploit their time and resources to test modules.}
 }
 
 % vysázení obsahu
