--- a/text/prilohy.tex
+++ b/text/prilohy.tex
@@ -610,7 +610,7 @@ detection sometimes contained a bit of background for tennis pitches (figures
 was a problem in detecting football pitches, as the model sometimes detected
 wrongly also other green fields (figure \ref{fig:football2}). This problem is
 considered to be caused by the~fact that training data contained also amateur
-football pitches consisting only of rectangular green field and two goals.
+football pitches consisting only of a rectangular green field and two goals.
 
 \begin{figure}[H]
    \centering
@@ -661,7 +661,7 @@ clock and 560 MHz core clock. The training ran from the scratch.
 Results are worse than in the pitches detection. In the figure from the last
 epoch, figure \ref{fig:build-1},
 we can see a~tennis pitch and road detected as a building, the building with
-black roof was not recognized and only a small part of the~tribune was
+a black roof was not recognized and only a small part of the~tribune was
 detected.
 These problems may be caused by some of the following effects:
 \begin{itemize}
@@ -671,7 +671,7 @@ These problems may be caused by some of the following effects:
 \end{itemize}
 
 Even though the training took a shorter time, it reached much smaller loss
-function (0.5019 for the last epoch) than in the pitches training. A figures of
+function (0.5019 for the last epoch) than in the pitches training. A figure of
 detection with this loss
 function is shown in figure \ref{fig:build-1}.
 
