few cosmetic changes in text

--- a/text/1-intro.tex
+++ b/text/1-intro.tex
@@ -8,7 +8,7 @@ everything, they have wide applications. Their applications are in finance,
 data mining, language recognition, computer vision and many more.
 
 Another term that can be heard more and more is \textit{the information age}.
-The~availability of computers and the growth of memory limits results in huge
+The~availability of computers and the growth of memory limits result in huge
 amounts of data.
 
 The huge amount of data is a fuel for \zk{ANN}s. One hundred years ago, an
@@ -19,7 +19,7 @@ of few men. Five years ago, an earthquake in each branch of the field of
 computer science.
 
 The data availability and their opening in the field of geomatics, as well as
-the~computer performance open doors for the usage of \zk{ANN}s in geographic
+the~computer performance, open doors for the usage of \zk{ANN}s in geographic
 information systems (\zk{GIS}). Results of a special type of \zk{ANN}s called
 convolutional neural networks (\zk{CNN}s) promises a lot in computer vision and
 therefore also in \zk{GIS}, in tasks of detection and classification.
