--- a/text/6-conclusion.tex
+++ b/text/6-conclusion.tex
@@ -49,6 +49,7 @@ Possible extensions are:
 	and \zk{ResNet} 101 are supported.
 	\item Diversify head architecture types. The~current one is just very basic
 	one.
+	\item Implement image augmentation for the training.
 \end{itemize}
 
 The last thing worthy of mention is the~high gear of progress. After only six 
