--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -114,7 +114,7 @@
 
 @Article{all-conv-net,
   title     = {Striving for Simplicity: The All Convolutional Net},
-  author    = {Jost Tobias SPRINGERBERG and Alexey DOSOVITSKYI and Thomas BROX and Martin A. RIEDMILLER},
+  author    = {Jost T. SPRINGERBERG and Alexey DOSOVITSKYI and Thomas BROX and Martin A. RIEDMILLER},
   journal   = {CoRR},
   volume    = {abs/1412.6806},
   year      = {2014},
@@ -150,7 +150,7 @@
 
 @Article{simple-cells,
   title={Linearity and normalization in simple cells of the macaque primary visual cortex},
-  author={Matteo CARANDINI and David J. HEEGER and J. Anthony MOVSHON},
+  author={Matteo CARANDINI and David J. HEEGER and Joseph A. MOVSHON},
   journal={Journal of Neuroscience},
   volume={17},
   number={21},
@@ -161,7 +161,7 @@
 
 @Article{voc,
    title = {The Pascal Visual Object Classes Challenge: A Retrospective},
-   author = {> EVERINGHAM and S. M. A. ESLAMI and L. VAN GOOL and C. K. I. WILLIAMS and J. WINN and A. ZISSERMAN},
+   author = {Mark EVERINGHAM and S. M. A. ESLAMI and L. VAN GOOL and C. K. I. WILLIAMS and J. WINN and A. ZISSERMAN},
    journal = {International Journal of Computer Vision {IJCV}},
    volume = {111},
    number = {1},
@@ -204,7 +204,7 @@
 }
 
 @Article{cnn-nlp,
-  author    = {Marc Moreno LOPEZ and Jugal KALITA},
+  author    = {Marc M. LOPEZ and Jugal KALITA},
   title     = {Deep Learning applied to {NLP}},
   journal   = {CoRR},
   volume    = {abs/1703.03091},
@@ -270,7 +270,7 @@
 
 @Article{object-det,
   title = {Object Detection with Discriminatively Trained Part-Based Models},
-  author = {P. F. FELZENSWALB and Ross GIRSHICK and D. MCALLESTER and D. RAMANAN},
+  author = {Pedro F. FELZENSWALB and Ross GIRSHICK and D. MCALLESTER and D. RAMANAN},
   journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
   volume = {32},
   number = {9},
@@ -346,14 +346,14 @@
 
 @conference{avg-pooling,
   title = {A Theoretical Analysis of Feature Pooling in Visual Recognition},
-  author = {Y-Lan BOUREAU and J. PONCE and Yann LECUNN},
+  author = {Y-Lan BOUREAU and Jean PONCE and Yann LECUNN},
   booktitle = {Proceedings, 27th International Conference on Machine Learning {ICML}},
   year = {2010}
 }
 
 @conference{l2-pooling,
   title={Building high-level features using large scale unsupervised learning},
-  author={Q. V. LE},
+  author={Quoc V. LE},
   booktitle={IEEE International Conference on Acoustics, Speech and Signal Processing},
   year={2013}
 }
