--- a/text/ondrej-pesek-dp-2018.tex
+++ b/text/ondrej-pesek-dp-2018.tex
@@ -184,17 +184,18 @@
 % abstrakt
 \abstrakt 
 {The goal of this thesis is to develop software tools allowing the user to use
-Mask R-CNN (Mask region-based convolutional neural networks) in GRASS GIS.
-These tools allow the user to train his own Mask R-CNN model and use it to get
-vector masks from raster data. In the text of the thesis, the theory behind
-convolutional neural networks is introduced, followed by a list of their
-possible applications in the field of computer vision, a brief sketch of used
-technologies and is ended with a part dedicated to the implementation itself.
-The appendix contains a user manual and examples of usage.}
+Mask \zk{R-CNN} (Mask region-based convolutional neural networks) in \zk{GRASS}
+\zk{GIS}. These tools allow the user to train his own Mask \zk{R-CNN} model and
+use it to get vector masks from raster data. In the text of the thesis, the
+theory behind convolutional neural networks is introduced, followed by a list
+of their possible applications in the field of computer vision, a brief sketch
+of used technologies and is ended with a part dedicated to the implementation
+itself. The appendix contains a user manual and examples of usage.}
 {Cílem diplomové práce je návrh softwarových nástrojů umožňujících uživateli
-využití Mask R-CNN (Mask region-based convolutional neural networks) v
-prostředí GRASS GIS. Tyto nástroje zprostředkovávají možnost učit svůj vlastní
-Mask R-CNN model a~aplikovat jej za účelem získání vektorových masek objektů z
+využití Mask \zk{R-CNN} (Mask region-based convolutional neural networks) v
+prostředí \zk{GRASS} \zk{GIS}. Tyto nástroje zprostředkovávají možnost učit
+svůj vlastní Mask \zk{R-CNN} model a~aplikovat jej za účelem získání
+vektorových masek objektů z
 %% ML: textove -> uvodni?
 %% OP: V textové části -> V textu práce. Díky.
 rastrových dat. V textu práce je nejprve nastíněn teoretický základ
