publish text in PDF

--- a/text/1-intro.tex
+++ b/text/1-intro.tex
@@ -35,7 +35,7 @@ mentioned in the \zk{CNN} chapter will be described there. The research which
 concluded in the selection of Mask \zk{R-CNN} as the architecture for the 
 implementation will be depicted in this chapter.
 
-Chapter \ref{technologies} will introduce some of the most important 
+Chapter \ref{technologies} will describe some of the most important 
 technologies used during
 the~above-mentioned implementation.
 
