presentation - change one sentence

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -369,7 +369,7 @@ Postup práce modulu
 
 Postup práce modulu
 \begin{itemize}
-	\item<1-> naplnění natrénovanými váhami
+	\item<1-> načtení modelu
 	\item<2-> detekce pro každý obrázek
 	\item<3-> vektorizace
 \end{itemize}
